[gd_scene load_steps=6 format=2]

[ext_resource path="res://Menus/StartMenu.gd" type="Script" id=1]
[ext_resource path="res://UI/DefaultTheme.tres" type="Theme" id=2]
[ext_resource path="res://Sounds/Music/MainTheme.ogg" type="AudioStream" id=3]
[ext_resource path="res://Menus/UNHOLY_ECHO_1.png" type="Texture" id=4]

[sub_resource type="Theme" id=1]

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 239.538, 136.078 )
scale = Vector2( 0.24988, 0.24988 )
texture = ExtResource( 4 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 139.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 204.0
margin_top = 41.0
margin_right = 276.0
margin_bottom = 89.0

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer"]
margin_right = 72.0

[node name="ToolButton" type="ToolButton" parent="CenterContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 72.0
margin_bottom = 24.0
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
visible = false
margin_top = 28.0
margin_right = 72.0
margin_bottom = 48.0
theme = SubResource( 1 )
text = "Start game"

[node name="Button2" type="Button" parent="CenterContainer/VBoxContainer"]
visible = false
margin_top = 52.0
margin_right = 72.0
margin_bottom = 72.0
text = "Quit"

[node name="ToolButton2" type="ToolButton" parent="CenterContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 72.0
margin_bottom = 48.0
text = "Quit"

[node name="MainTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0
autoplay = true
[connection signal="pressed" from="CenterContainer/VBoxContainer/ToolButton" to="." method="_on_ToolButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ToolButton2" to="." method="_on_ToolButton2_pressed"]
